<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_scanandcount2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hsm.demo.scanandcount2.scanandcount2"
    tools:showIn="@layout/activity_scanandcount2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout0">
            <!--Daten block -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/daten_block"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/daten_block_label"
                    >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/labelLarge"
                            android:text="@string/dataLabelText"
                            android:id="@+id/dataLabel"
                            android:enabled="true"
                            />
                        <Button
                            android:layout_gravity="right|top"
                            android:text="@string/btnKeybdCaption"

                            android:layout_height="32dp"
                            android:textSize="10sp"
                            android:layout_width="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/btnKeybd" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@style/editTextLarge"
                        android:id="@+id/txtData"
                        android:maxLines="1"
                        android:layout_below="@+id/dataLabel"
                        android:layout_alignParentStart="true" />
                </LinearLayout>
            </LinearLayout>
            <!--Quantity block -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/quantity_block">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@style/labelLarge"
                        android:text="@string/numberLabelText"
                        android:id="@+id/numberLabel"
                        android:enabled="true"
                        android:layout_below="@+id/txtData"
                        android:layout_alignParentStart="true" />
                    <CheckBox
                        android:id="@+id/chkScanQuantity"
                        android:layout_width="wrap_content"
                        android:text="scan"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@style/editTextLarge"
                        android:id="@+id/txtQuantity"
                        android:maxLines="1"
                        android:layout_below="@+id/numberLabel"
                        android:layout_alignParentStart="true"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
            <!--Lagerort block -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@style/labelLarge"
                        android:text="@string/lblLagerort"
                        android:id="@+id/lblLagerort"
                        android:enabled="true"
                        android:layout_below="@+id/txtData"
                        android:layout_alignParentStart="true" />
                    <CheckBox
                        android:id="@+id/chkScanLager"
                        android:layout_width="wrap_content"
                        android:text="scan"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@style/editTextLarge"
                        android:id="@+id/txtLagerort"
                        android:maxLines="1"
                        android:layout_below="@+id/lblLagerort"
                        android:layout_alignParentStart="true"
                     />
                </LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/button_panel">
                <Button
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancelText"
                    android:id="@+id/btnCancel"
                    android:focusable="false"
                    />

                <Button
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSaveText"
                    android:id="@+id/btnSave"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:id="@+id/button_panel_file"
                android:visibility="gone">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnListCaption"
                                android:id="@+id/btnList"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentStart="true" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnClearLabel"
                                android:id="@+id/btnClear"
                                android:layout_centerHorizontal="true"
                                />

                            <Button
                                style="?android:attr/buttonStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnExportCaption"
                                android:id="@+id/btnExport"
                                android:layout_alignParentRight="true"
                                />
            </RelativeLayout>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rLagerort"
                android:id="@+id/chkUseLagerort"
                android:layout_below="@+id/button_panel_file"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/btnCancel"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
